Win Native Notifications: Add profile id and incognito status to hashed tag.

Also fix a parameter mismatch in the Close function.

Bug: 834101, 826817, 734095
Change-Id: I94bef0defae6c7179605db23bfc8ff0020433f75
Reviewed-on: https://chromium-review.googlesource.com/1023231
Commit-Queue: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553105}
Former-commit-id: 2c8854dd178f1a475200c52c254825117a76d010